--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </section>
 
       <section class="pokedex__cover">
-        <span class="pokedex__cover-picture"></span>
+        <span class="pokedex__cover--picture"></span>
       </section>
 
     </main>
